<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textColor="@color/textMain"
        android:textSize="40sp"
        android:layout_weight="0"/>

    <Button
        android:id="@+id/button"
        android:onClick="openPuzzle1"
        android:background="@drawable/my_shape"
        android:textSize="40sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pazzle_1"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button2"
        android:onClick="openPuzzle2"
        android:background="@drawable/my_shape"
        android:textSize="40sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pazzle_2"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button3"
        android:onClick="openPuzzle3"
        android:background="@drawable/my_shape"
        android:textSize="40sp"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pazzle_3"
        android:layout_weight="1"/>
</LinearLayout>