<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Puzzle2">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/text"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@color/text"
            android:textSize="60sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/text"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/money"
            android:textColor="@color/text"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llMain">

        <LinearLayout
            android:id="@+id/donaldLayout"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/p2_etn1_9"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn2_5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn3_6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn4_7"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/geraldLayout"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/p2_etn5_10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn6_0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn7_8"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn8_5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:background="@color/text"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/ronaldLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/p2_etn9_10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn10_0"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn11_6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn12_5"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />

            <EditText
                android:id="@+id/p2_etn13_2"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/textMain"
                android:textSize="60sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivPlus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/llMain"
        app:layout_constraintEnd_toStartOf="@+id/llMain"
        app:layout_constraintTop_toTopOf="@+id/llMain"
        app:layout_constraintVertical_bias="0.32"
        app:srcCompat="@drawable/ic_baseline_plus_24" />

    <ImageView
        android:id="@+id/ivPlus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/mainLayout"
        app:layout_constraintEnd_toStartOf="@+id/mainLayout"
        app:layout_constraintTop_toTopOf="@+id/mainLayout"
        app:layout_constraintVertical_bias="0.32"
        app:srcCompat="@drawable/ic_baseline_plus_24" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="checkResult"
        android:text="@string/btn_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear"
        android:onClick="clearNumbers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_result"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>